--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="start" onclick="play()">Start</button>
 </div>
 
-    <p id="startScore">Pravila Igre <br>
+    <p id="startScore">Pravila Igre: <br>
         - Kliknite na sto vise virusa<br>
         - Izbegavajte Bombe<br>
         - Sakupljajte Poklone<br>
@@ -41,9 +41,9 @@
     <p id="footer">Created By: Janković Boris</p>
 
     <div class="center">
-    <div id="img1"><img id="pic1" src="photos/skull.png"><p class="imgtext">Promasio si cak i sahranu.</p></div>
-    <div id="img2"><img id="pic2" src="photos/grave.png"><p class="imgtext">Toliko si dobar da si sahranjen</p></div>
-    <div id="img3"><img id="pic3" src="photos/ambulance.png"><p class="imgtext">Dilujemo respiratore!</p></div>
+    <div id="img1"><img id="pic1" src="photos/skull.png"><p class="imgtext"> &nbsp; Daća</p></div>
+    <div id="img2"><img id="pic2" src="photos/grave.png"><p class="imgtext">Mrtav'ladan</p></div>
+    <div id="img3"><img id="pic3" src="photos/ambulance.png"><p class="imgtext">Respriator ne gine!</p></div>
     <div id="img4"><img id="pic4" src="photos/doctor.png"><p class="imgtext">Bravo Doktore!</p></div>
     <div id="img5"><img id="pic5" src="photos/superman.png"><p class="imgtext">Asimptomatski!</p></div>
     </div>
